# zeroconf-p2p-vpn

./: .gitignore  Cargo.toml  README.rst  TODO  build.rs
.cargo/: config.toml
docker/: Dockerfile  README.rst  docker-compose.yml  integration-test.sh
docker/data/keys/: alice.pem  alice.raw  alice_pub.raw  bob.pem  bob.raw  bob_pub.z32  pem_to_zbase32.py
proto/p2p_vpn/control/v1/: control.proto
src/: addr.rs  buffer_pool.rs  connection.rs  error.rs  main.rs  osal.rs  peer.rs  proto.rs  relay.rs  route.rs  tun.rs
src/connection/: actor.rs  connect.rs  iroh.rs  peer.rs
src/osal/: buffer_pool.rs  globals.rs  if_addr.rs  route.rs  tun.rs
src/osal/tun/: error.rs
src/peer/: conn_metrics.rs  validate_addr.rs
src/tun/: packet.rs
