[package]
name = "zeroconf-p2p-vpn"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache 2.0"

[dependencies]
anyhow = "1.0"
futures-util = "0.3.31"
ipnet = "2.12.0"
iroh = "0.98.2"
libc = "0.2.186"
metrics = "0.24"
nix = { version = "0.29", features = ["fs", "net", "ioctl"] }
prost = "0.14.4"
rtnetlink = "0.21.0"
tokio = { version = "1.36", features = ["full"] }
tokio-uring = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost = "0.14.4"
prost-build = "0.14.4"
