[package]
name = "zeroconf-p2p-vpn"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache 2.0"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
buf-list = "1.1"
etherparse = "0.20"
futures-util = "0.3.31"
ipnet = "2.12.0"
iroh = "0.98.2"
libc = "0.2.186"
metrics = "0.24"
pretty-hex = "0.4"
prost = "0.14.4"
net-route = "0.4.6"
thin-status = "0.1.2"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun-rs = { version = "2.8.5", features = ["async"] }
secure-p2p-transport = { git = "https://github.com/ppetr/secure-p2p-transport.git" }


[build-dependencies]
prost = "0.14.4"
prost-build = "0.14.4"

[profile.dev]
opt-level = 0
#rustflags = ["-C", "target-cpu=native"]

[profile.dev.package."*"]
opt-level = 3  # Optimize all dependencies, in particular TLS and Iroh.

[profile.test]
opt-level = 0
#rustflags = ["-C", "target-cpu=native"]

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
